--- a/src/scss/blocks/_nav.scss
+++ b/src/scss/blocks/_nav.scss
@@ -1,6 +1,5 @@
 .nav {
   line-height: 1;
-  font-weight: 900;
   margin-top: -#{get-size('400')};
   margin-inline-start: -#{get-size('400')};
 
@@ -9,15 +8,26 @@
     flex-wrap: wrap;
 
     > * {
-      padding-top: get-size('400');
+      padding-top: get-size('300');
       padding-inline-start: get-size('400');
+
+      @include media-query('sm') {
+        padding-top: get-size('400');
+        padding-inline-start: get-size('600');
+      }
     }
   }
 
   a {
-    text-decoration: none;
+    color: get-color('dark-shade');
     display: block;
+    font-size: get-size('400');
     position: relative;
+    text-decoration: none;
+
+    @include media-query('sm') {
+      font-size: get-size('500');
+    }
 
     // Adds the fake border to active state items
     &[data-state='active'],
@@ -31,7 +41,7 @@
         top: 100%;
         left: 0;
         margin-top: 0.25rem;
-        background: get-color('quinary-shade');
+        background: get-color('primary-shade');
       }
     }
   }
