--- a/src/scss/_config.scss
+++ b/src/scss/_config.scss
@@ -36,12 +36,12 @@ $gorko-colors: (
   'light': #eceff1,
   'light-shade': #babdbe,
   'light-glare': #ffffff,
-  'primary': #00838f,
+  'primary': #006064,
   'primary-shade': #005662,
   'primary-glare': #4fb3bf,
-  'secondary': #6ac2b6,
-  'secondary-shade': #35a495,
-  'secondary-glare': #98e2d8,
+  'secondary': #80cbc4,
+  'secondary-shade': #81b9bf,
+  'secondary-glare': #e5ffff,
   'tertiary': #ffd490,
   'tertiary-shade': #ffca77,
   'tertiary-glare': #ffdeaa,
