change primary colour

--- a/src/scss/_config.scss
+++ b/src/scss/_config.scss
@@ -36,9 +36,9 @@ $gorko-colors: (
   'light': #eceff1,
   'light-shade': #babdbe,
   'light-glare': #ffffff,
-  'primary': #006064,
-  'primary-shade': #005662,
-  'primary-glare': #4fb3bf,
+  'primary': #8e24aa,
+  'primary-shade': #5c007a,
+  'primary-glare': #c158dc,
   'secondary': #80cbc4,
   'secondary-shade': #81b9bf,
   'secondary-glare': #e5ffff,
