update mobile footer styling

--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -39,13 +39,13 @@
       <footer role="contentinfo" class="site-foot">
         <div class="wrapper">
           <div class="site-foot__content">
-          <p class="site-foot__email"><a href="mailto:davehunterdesign@gmail.com">davehunterdesign@gmail.com</a></p>
-          <ul class="site-foot__link-list">
-            <li class="site-foot__link-item"><a href="">Twitter</a></li>
-            <li class="site-foot__link-item"><a href="">LinkedIn</a></li>
-            <li class="site-foot__link-item"><a href="">GitHub</a></li>
-          </ul>
-        </div>
+            <p class="site-foot__email"><a href="mailto:davehunterdesign@gmail.com">davehunterdesign@gmail.com</a></p>
+            <ul class="site-foot__link-list">
+              <li class="site-foot__link-item"><a href="https://twitter.com/dave_hunter_">Twitter</a></li>
+              <li class="site-foot__link-item"><a href="https://www.linkedin.com/in/david-hunter-438262145/">LinkedIn</a></li>
+              <li class="site-foot__link-item"><a href="https://github.com/davidhunter08">GitHub</a></li>
+            </ul>
+          </div>
         </div>
       </footer>
     </div> 
