--- a/src/scss/blocks/_site-foot.scss
+++ b/src/scss/blocks/_site-foot.scss
@@ -17,7 +17,11 @@
 .site-foot__email {
   color: get-color('primary');
   list-style: none;
-  margin-bottom: 0;
+  margin-bottom: get-size('400');
+
+  @include media-query('md') {
+    margin-bottom: 0;
+  }
 }
 
 .site-foot__link-list {
@@ -30,8 +34,10 @@
 }
 
 .site-foot__link-item {
+  margin-bottom: get-size('400');
 
   @include media-query('md') {
+    margin-bottom: 0;
     padding-inline-start: get-size('500');
   }
 
