restyle header and footer, also remove card grid

--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -158,4 +158,8 @@ p {
   text-decoration-color: get-color('primary');
 }
 
+.link-dark-shade {
+  color: get-color('dark-shade');
+  text-decoration-color: get-color('dark-shade');
+}
 
