--- a/src/scss/blocks/_card.scss
+++ b/src/scss/blocks/_card.scss
@@ -2,20 +2,11 @@ ul.card-group {
   list-style: none;
   padding-left: 0;
   padding-top: get-size('700');
-  display: grid;
-  grid-column-gap: get-size('700');
-  grid-row-gap: get-size('400');
   margin-bottom: get-size('400');
-
-  @include media-query('md') {
-    grid-template-columns: repeat(auto-fill, minmax(30rem, 1fr));
-    grid-row-gap: get-size('700');
-  }
 }
 
 .card {
-  display: flex;
-  flex-direction: column;
+  margin-bottom: get-size('900');
 }
 
 .card__img {
