--- a/src/scss/blocks/_site-head.scss
+++ b/src/scss/blocks/_site-head.scss
@@ -1,10 +1,6 @@
 .site-head {
-  background: get-color('light-glare');
-  padding: get-size('400') 0;
-
-  @include media-query('sm') {
-    padding: get-size('500') 0;
-  }
+  border-bottom: 1px solid get-color('light-shade');
+  padding: get-size('500') 0;
 }
 
 .site-head__inner {
