--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -42,19 +42,19 @@
             <h2 class="visually-hidden">Contact me</h2>
             <p class="site-foot__email">
               <span class="visually-hidden">Email me at </span>
-              <a href="mailto:davehunterdesign@gmail.com">davehunterdesign@gmail.com</a>
+              <a class="link--no-underline" href="mailto:davehunterdesign@gmail.com">davehunterdesign@gmail.com</a>
             </p>
             <h3 class="visually-hidden">Online profiles</h3>
             <p class="visually-hidden">Find me on:</p>
             <ul class="site-foot__link-list">
               <li class="site-foot__link-item">
-                <a href="https://twitter.com/dave_hunter_">Twitter</a>
+                <a class="link--no-underline" href="https://twitter.com/dave_hunter_">Twitter</a>
               </li>
               <li class="site-foot__link-item">
-                <a href="https://www.linkedin.com/in/david-hunter-438262145/">LinkedIn</a>
+                <a class="link--no-underline" href="https://www.linkedin.com/in/david-hunter-438262145/">LinkedIn</a>
               </li>
               <li class="site-foot__link-item">
-                <a href="https://github.com/davidhunter08">GitHub</a>
+                <a class="link--no-underline" href="https://github.com/davidhunter08">GitHub</a>
               </li>
             </ul>
           </div>
