--- a/src/scss/blocks/_button.scss
+++ b/src/scss/blocks/_button.scss
@@ -1,10 +1,8 @@
 .button {
-  @extend .radius;
-
   display: inline-block;
-  padding: 1rem 1.5rem;
+  padding: 0.75rem 1rem;
   background: get-color('primary');
-  border-radius: 0.75rem;
+  border-radius: 0;
   color: get-color('light-glare');
   box-shadow: 0 2px 0 0 get-color('primary-shade');
   text-decoration: none;
