--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -11,11 +11,6 @@
 @import 'blocks/tags-list';
 
 // Import utilities
-@import 'utilities/dot-shadow';
-@import 'utilities/flow';
-@import 'utilities/frame';
-@import 'utilities/panel';
-@import 'utilities/radius';
 @import 'utilities/site-wrap';
 @import 'utilities/visually-hidden';
 @import 'utilities/wrapper';
@@ -36,7 +31,7 @@ body {
 
 a:not([class]) {
   color: currentColor;
-  text-decoration-color: get-color('primary');
+  text-decoration-color: get-color('dark-shade');
 }
 
 :focus {
@@ -96,6 +91,7 @@ h4 {
 }
 
 a {
+  color: get-color('dark-shade');
   text-decoration-thickness: 0.1em;
   text-underline-offset: 0.15em;
 
@@ -127,11 +123,11 @@ h2 {
 }
 
 h3 {
-  font-size: get-size('600');
+  font-size: get-size('500');
   margin-bottom: get-size('500');
 
   @include media-query('md') {
-    font-size: get-size('700');
+    font-size: get-size('600');
     margin-bottom: get-size('600');
   }
 }
@@ -153,13 +149,28 @@ p {
   font-size: get-size('600');
 }
 
-.link {
+.link--primary {
   color: get-color('primary');
   text-decoration-color: get-color('primary');
 }
 
-.link-dark-shade {
-  color: get-color('dark-shade');
-  text-decoration-color: get-color('dark-shade');
+.text-muted {
+  color: get-color('dark');
 }
 
+.text-bold {
+  font-weight: 700;
+}
+
+ul.list-group {
+  margin-bottom: get-size('800');
+  padding-top: get-size('400');
+}
+
+.list-group__item {
+  margin-bottom: get-size('700');
+
+  > * {
+    margin-bottom: get-size('300');
+  }
+}
