--- a/src/scss/_config.scss
+++ b/src/scss/_config.scss
@@ -14,17 +14,18 @@ $gorko-base-size: 1rem;
  * your whole project.
  */
 $gorko-size-scale: (
-  '250': $gorko-base-size * 0.6,
+  '250': $gorko-base-size * 0.5,
   '300': $gorko-base-size * 0.75,
-  '350': $gorko-base-size * 0.9,
+  '350': $gorko-base-size * 0.875,
   '400': $gorko-base-size,
-  '450': $gorko-base-size * 1.2,
-  '500': $gorko-base-size * 1.4,
-  '600': $gorko-base-size * 1.8,
-  '700': $gorko-base-size * 2.4,
-  '800': $gorko-base-size * 3.2,
-  '900': $gorko-base-size * 4.2,
-  'major': $gorko-base-size * 5.6,
+  '450': $gorko-base-size * 1.1875,
+  '500': $gorko-base-size * 1.5,
+  '600': $gorko-base-size * 2,
+  '700': $gorko-base-size * 2.5,
+  '800': $gorko-base-size * 3,
+  '850': $gorko-base-size * 3.5,
+  '900': $gorko-base-size * 4,
+  'major': $gorko-base-size * 4.4375,
 );
 
 /**
@@ -33,18 +34,18 @@ $gorko-size-scale: (
  * You can also use them to power borders, fills or shadows, for example.
  */
 $gorko-colors: (
-  'dark': #455a64,
-  'dark-shade': #1c313a,
+  'dark': #37474F,
+  'dark-shade': #37474F,
   'dark-glare': #718792,
-  'light': #eceff1,
-  'light-shade': #babdbe,
+  'light': #F5F5F5,
+  'light-shade': #F5F5F5,
   'light-glare': #ffffff,
-  'primary': #8e24aa,
-  'primary-shade': #5c007a,
-  'primary-glare': #c158dc,
-  'secondary': #80cbc4,
-  'secondary-shade': #81b9bf,
-  'secondary-glare': #e5ffff,
+  'primary': #00838f,
+  'primary-shade': #006064,
+  'primary-glare': #0097a7,
+  'secondary': #007A85,
+  'secondary-shade': #006064,
+  'secondary-glare': #0097a7,
   'tertiary': #ffd490,
   'tertiary-shade': #ffca77,
   'tertiary-glare': #ffdeaa,
@@ -79,8 +80,8 @@ $gorko-config: (
   ),
   'font': (
     'items': (
-      'base': '"Inter", Arial, sans-serif',
-      'sans': '"Inter", Arial, sans-serif',
+      'base': '"Raleway", Arial, sans-serif',
+      'sans': '"Raleway", Arial, sans-serif',
     ),
     'output': 'standard',
     'property': 'font-family',
