--- a/src/scss/blocks/_site-foot.scss
+++ b/src/scss/blocks/_site-foot.scss
@@ -1,6 +1,10 @@
 .site-foot {
-  border-top: 1px solid get-color('light-shade');
-  padding: get-size('700') 0;
+  background: get-color('light-shade');
+  padding: get-size('500') 0;
+
+  @include media-query('sm') {
+    padding: get-size('600') 0;
+  }
 }
 
 .site-foot__content {
