--- a/src/scss/blocks/_site-head.scss
+++ b/src/scss/blocks/_site-head.scss
@@ -1,6 +1,10 @@
 .site-head {
-  border-bottom: 1px solid get-color('light-shade');
+  background: get-color('light-glare');
   padding: get-size('500') 0;
+
+  @include media-query('sm') {
+    padding: get-size('600') 0;
+  }
 }
 
 .site-head__inner {
@@ -13,12 +17,12 @@
 .site-head__brand {
   color: get-color('dark-shade');
   flex-shrink: 0;
-  font-size: get-size('500');
+  font-size: get-size('450');
   font-weight: 700;
   margin-inline-end: get-size('600'); // Prevents nav bunching up to the logo
   text-decoration: none;
-}
 
-.site-head__nav {
-  padding: get-size('300') 0;
+  @include media-query('sm') {
+    font-size: get-size('450');
+  }
 }
