--- a/src/scss/_config.scss
+++ b/src/scss/_config.scss
@@ -14,18 +14,17 @@ $gorko-base-size: 1rem;
  * your whole project.
  */
 $gorko-size-scale: (
-  '250': $gorko-base-size * 0.5,
-  '300': $gorko-base-size * 0.75,
-  '350': $gorko-base-size * 0.875,
-  '400': $gorko-base-size,
-  '450': $gorko-base-size * 1.1875,
-  '500': $gorko-base-size * 1.5,
-  '600': $gorko-base-size * 2,
-  '700': $gorko-base-size * 2.5,
-  '800': $gorko-base-size * 3,
-  '850': $gorko-base-size * 3.5,
-  '900': $gorko-base-size * 4,
-  'major': $gorko-base-size * 4.4375,
+  '200': $gorko-base-size * 0.5, /* 8px */
+  '300': $gorko-base-size * 0.75, /* 12px */
+  '400': $gorko-base-size, /* 16px */
+  '450': $gorko-base-size * 1.1875, /* 19px */
+  '500': $gorko-base-size * 1.5, /* 24px */
+  '600': $gorko-base-size * 2, /* 32px */
+  '700': $gorko-base-size * 2.5, /* 40px */
+  '800': $gorko-base-size * 3, /* 48px */
+  '850': $gorko-base-size * 3.5, /* 56px */
+  '900': $gorko-base-size * 4, /* 64px */
+  'major': $gorko-base-size * 4.4375, /* 72px */
 );
 
 /**
