--- a/src/scss/blocks/_button.scss
+++ b/src/scss/blocks/_button.scss
@@ -2,7 +2,7 @@
   display: inline-block;
   padding: 0.75rem 1rem;
   background: get-color('primary');
-  border-radius: 0;
+  border-radius: 8px;
   color: get-color('light-glare');
   box-shadow: 0 2px 0 0 get-color('primary-shade');
   text-decoration: none;
@@ -18,5 +18,17 @@
   &[data-variant='ghost'] {
     background: transparent;
     color: get-color('quaternary-glare');
+  }
+}
+
+.button--outline {
+  background: transparent;
+  border: 2px solid get-color('primary');
+  color: get-color('primary');
+  box-shadow: none;
+
+  &:hover {
+    background: get-color('primary') !important;
+    color: get-color('light-glare') !important;
   }
 }
