--- a/src/scss/blocks/_card.scss
+++ b/src/scss/blocks/_card.scss
@@ -1,19 +1,21 @@
 ul.card-group {
   display: grid;
-  grid-template-columns: repeat(auto-fill, 45%);
+  grid-template-columns: repeat(auto-fill, 100%);
   grid-auto-rows: auto;
-  grid-gap: 5%;
+  grid-gap: 0;
   list-style: none;
   padding-left: 0;
   margin-bottom: get-size('300');
 
   @include media-query('sm') {
+    grid-template-columns: repeat(auto-fill, 45%);
+    grid-gap: 5%;
     margin-bottom: get-size('400');
   }
 }
 
 .card {
-  margin-bottom: get-size('400');
+  margin-bottom: get-size('600');
 
   @include media-query('sm') {
     margin-bottom: get-size('400');
@@ -29,7 +31,7 @@ ul.card-group {
 }
 
 .card__title {
-  font-size: get-size('500');
+  font-size: get-size('450');
   margin-bottom: get-size('200');
 
   @include media-query('sm') {
